@startuml

title __ADVBUILDER's Class Diagram__\n

  namespace example_builder.advBuilder {
    class example_builder.advBuilder.AdvPatternCar {
        - maxSpeed : int
        - model : String
        + setMaxSpeed()
        + setModel()
        + setTransmission()
        + toString()
    }
  }
  

  namespace example_builder.advBuilder {
    abstract class example_builder.advBuilder.AdvPatternCarBuilder {
        {abstract} ~ buildMaxSpeed()
        {abstract} ~ buildModel()
        {abstract} ~ buildTransmission()
        ~ createCar()
        ~ getCar()
    }
  }
  

  namespace example_builder.advBuilder {
    class example_builder.advBuilder.Director {
        ~ buildCar()
        ~ setBuilder()
    }
  }
  

  namespace example_builder.advBuilder {
    class example_builder.advBuilder.FordMondeoBuilder {
        ~ buildMaxSpeed()
        ~ buildModel()
        ~ buildTransmission()
    }
  }
  

  namespace example_builder.advBuilder {
    class example_builder.advBuilder.Main {
        {static} + main()
    }
  }
  

  namespace example_builder.advBuilder {
    class example_builder.advBuilder.ToyotaCelicaBuilder {
        ~ buildMaxSpeed()
        ~ buildModel()
        ~ buildTransmission()
    }
  }
  

  namespace example_builder.advBuilder {
    enum Transmission {
      AUTO
      MANUAL
    }
  }
  

  example_builder.advBuilder.AdvPatternCar o-- example_builder.advBuilder.Transmission : transmission
  example_builder.advBuilder.AdvPatternCarBuilder o-- example_builder.advBuilder.AdvPatternCar : car
  example_builder.advBuilder.Director o-- example_builder.advBuilder.AdvPatternCarBuilder : builder
  example_builder.advBuilder.FordMondeoBuilder -up-|> example_builder.advBuilder.AdvPatternCarBuilder
  example_builder.advBuilder.ToyotaCelicaBuilder -up-|> example_builder.advBuilder.AdvPatternCarBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
